added some method calls to CC API main

--- a/core/test_suite/res/test_configuration.yml
+++ b/core/test_suite/res/test_configuration.yml
@@ -1,3 +1,7 @@
+#########################################################################
+###################### CerebralCortex Core Config #######################
+#########################################################################
+
 cassandra:
   host: 127.0.0.1
   port: 9042
@@ -35,6 +39,15 @@ minio:
 kafkaserver:
   host: 127.0.0.1
   port: 9092
+  batch_duration: 5 #in seconds
+  consumer_group_id: "md2k-cc"
+  #topics
+  filequeue: "filequeue"
+  processed_stream: "processed_stream"
+
+#########################################################################
+################ CerebralCortex kafka_handler Config ####################
+#########################################################################
 
 
 
