optimized code Added Cassandra API tuning parameters Changed influxdb protocol for improved performance

--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -38,3 +38,7 @@ minio:
 
 logging:
   log_path: '/var/log/cerebralcortex/' # make sure directory is writeable by current OS user
+
+data_ingestion:
+  cassandra_in: True
+  influxdb_in: False
