--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -43,6 +43,13 @@ data_ingestion:
   cassandra_in: True
   influxdb_in: False
 
+
+#########################################################################
+########################### KAFKA Config ################################
+#########################################################################
+kafkaserver:
+  host: 127.0.0.1
+  port: 9092
 #########################################################################
 ################ CerebralCortex API SERVER Config #######################
 #########################################################################
