--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -22,7 +22,7 @@ mysql:
   port: 3306
   database: cerebralcortex
   db_user: root
-  db_pass: pass
+  db_pass: random_root_password
   datastream_table: stream
   kafka_offsets_table: kafka_offsets
   processing_module_table: processing_module
@@ -65,3 +65,7 @@ routes:
   auth: "auth"
   stream: "stream"
   object: "object"
+
+#################### TESTING PARAMS ########################
+mode:
+  run: "test"
