--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -20,6 +20,8 @@ influxdb:
 mysql:
   host: 127.0.0.1
   port: 3306
+  connection_pool_name: "CC_Pool"
+  connection_pool_size: 30
   database: cerebralcortex
   db_user: root
   db_pass: random_root_password
