--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -3,7 +3,7 @@
 #########################################################################
 
 cassandra:
-  host: 127.0.0.1
+  host: kashyyyk10dot.memphis.edu
   port: 9042
   keyspace: cerebralcortex
   db_user: ""
@@ -11,20 +11,20 @@ cassandra:
   datapoint_table: data
 
 influxdb:
-  host: 127.0.0.1
+  host: dagobah10dot.memphis.edu
   port: 8086
   database: cerebralcortex_raw
   db_user: ""
   db_pass: ""
 
 mysql:
-  host: 127.0.0.1
+  host: 10.40.40.46
   port: 3306
   connection_pool_name: "CC_Pool"
   connection_pool_size: 1
   database: cerebralcortex
   db_user: root
-  db_pass: random_root_password
+  db_pass: mEm62$%YsoK*88!
   datastream_table: stream
   kafka_offsets_table: kafka_offsets
   processing_module_table: processing_module
@@ -34,8 +34,8 @@ mysql:
 minio:
   host: 127.0.0.1
   port: 9000
-  access_key: 'ZngmrLWgbSfZUvgocyeH'
-  secret_key: 'IwUnI5w0f5Hf1v2qVwcr'
+  access_key: 'eiyLwkdFUnCw2V48KiUR'
+  secret_key: '4W6gs8eyOEMmVIj1pBhc'
   secure: False #ssl
 
 logging:
@@ -69,7 +69,7 @@ influxdb_blacklist: # influxdb data ingestion pipeline will not process stream n
 ########################### KAFKA Config ################################
 #########################################################################
 kafkaserver:
-  host: 127.0.0.1
+  host: dagobah10dot.memphis.edu
   port: 9092
 #########################################################################
 ################ CerebralCortex API SERVER Config #######################
@@ -87,3 +87,6 @@ routes:
   stream: "stream"
   object: "object"
 
+#################### TESTING PARAMS ########################
+mode:
+  run: "productionss"
