--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -50,28 +50,66 @@ logging:
   log_path: '/var/log/cerebralcortex/' # make sure directory is writeable by current OS user
 
 data_ingestion:
-  influxdb_in: True
-  nosql_in: False # for now, this cannot be False
+  influxdb_in: False
+  nosql_in: True
   nosql_store: "hdfs" # acceptable parameters are: cassandra, scylladb, hdfs
 
 influxdb_blacklist: # influxdb data ingestion pipeline will not process stream names defined here
-  motionsense_hrv_accel_right: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  motionsense_hrv_accel_left: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  motionsense_hrv_gyro_right: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  motionsense_hrv_gyro_left: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  motionsense_hrv_led_quality_right: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  motionsense_hrv_led_quality_left: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  motionsense_hrv_led_right: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  motionsense_hrv_led_left: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  phone_accel: "ACCELEROMETER--org.md2k.phonesensor--PHONE"
-  phone_gyro: "GYROSCOPE--org.md2k.phonesensor--PHONE"
-  autosense_battery: "BATTERY--org.md2k.autosense"
-  autosense_ecg: "ECG--org.md2k.autosense"
-  autosense_rip: "RIP--org.md2k.autosense"
-  autosense_accel_x: "ACCELEROMETER-X--org.md2k.autosense"
-  autosense_accel_x: "ACCELEROMETER-Y--org.md2k.autosense"
-  autosense_accel_x: "ACCELEROMETER-Z--org.md2k.autosense"
-  autosense_gyro: "GYRO--org.md2k.autosense"
+  ibl1: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl2: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl3: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl4: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl5: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl6: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl7: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl8: "ACCELEROMETER--org.md2k.phonesensor--PHONE"
+  ibl9: "GYROSCOPE--org.md2k.phonesensor--PHONE"
+  ibl10: "DATA_QUALITY--ECG--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl11: "BATTERY--org.md2k.autosense"
+  ibl12: "ECG--org.md2k.autosense"
+  ibl13: "RIP--org.md2k.autosense"
+  ibl14: "ACCELEROMETER-X--org.md2k.autosense"
+  ibl15: "ACCELEROMETER-Y--org.md2k.autosense"
+  ibl16: "ACCELEROMETER-Z--org.md2k.autosense"
+  ibl17: "GYRO--org.md2k.autosense"
+  ibl18: "AMBIENT_TEMPERATURE--org.md2k.phonesensor--PHONE"
+  ibl19: "BATTERY--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl20: "ACCELEROMETER--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl21: "RESPIRATION_BASELINE--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl22: "ECG--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl23: "RAW--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl24: "RESPIRATION--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl25: "SEQUENCE_NUMBER--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl26: "DATA_QUALITY--ACCELEROMETER--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl27: "DATA_QUALITY--RESPIRATION--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
+  ibl28: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl29: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl30: "CU_AUDIO_INFERENCE--edu.dartmouth.eureka"
+  ibl31: "CU_AUDIO_FEATURE--edu.dartmouth.eureka"
+  ibl32: "CU_AUDIO_ENERGY--edu.dartmouth.eureka"
+  ibl33: "LOCATION--org.md2k.phonesensor--PHONE"
+  ibl34: "PROXIMITY--org.md2k.phonesensor--PHONE"
+  ibl35: "DATA_QUALITY--ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl36: "BATTERY--org.md2k.phonesensor--PHONE"
+  ibl37: "DATA_QUALITY--ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl38: "BATTERY--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl39: "BATTERY--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl40: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl41: "SEQUENCE_NUMBER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl42: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl43: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl44: "RAW--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl45: "PRESSURE--org.md2k.phonesensor--PHONE"
+  ibl46: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl47: "AMBIENT_LIGHT--org.md2k.phonesensor--PHONE"
+  ibl48: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
+  ibl49: "RAW--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl50: "GYROSCOPE--org.md2k.phonesensor--PHONE"
+  ibl51: "SEQUENCE_NUMBER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl52: "ACCELEROMETER--org.md2k.phonesensor--PHONE"
+  ibl53: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+  ibl54: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+
 
 #########################################################################
 ########################### KAFKA Config ################################
