added data_replay table related methods to mark day as processed after successful ingestion

--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -36,6 +36,7 @@ mysql:
   datastream_table: stream
   kafka_offsets_table: kafka_offsets
   processing_module_table: processing_module
+  data_replay_table: data_replay
   user_table: user
   study_table: study
 
