--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -1,6 +1,8 @@
 #########################################################################
 ###################### CerebralCortex Core Config #######################
 #########################################################################
+cc:
+  debug: True # Setting this to True will log and print errors on console as well
 
 cassandra:
   host: 127.0.0.1
@@ -13,7 +15,7 @@ cassandra:
 hdfs:
   host: 127.0.0.1
   port: 9009
-  raw_files_dir: ""
+  raw_files_dir: "/cerebralcortex/data/"
   hdfs_user: ""
   hdfs_kerb_ticket: ""
 
