--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -52,7 +52,7 @@ minio:
 data_ingestion:
   influxdb_in: False
   nosql_in: True
-  nosql_store: "filesystem" # acceptable parameters are: cassandra, scylladb, hdfs, filesystem
+  nosql_store: "hdfs" # acceptable parameters are: cassandra, scylladb, hdfs, filesystem
   filesystem_path: "/home/ali/IdeaProjects/MD2K_DATA/data/test/" # in case of nosql_store=filesystem, provide directory path where data shall be stored
 
 influxdb_blacklist: # influxdb data ingestion pipeline will not process stream names defined here
