--- a/cerebralcortex/core/resources/cc_configuration.yml
+++ b/cerebralcortex/core/resources/cc_configuration.yml
@@ -149,5 +149,5 @@ blacklist: #only works for "mydb" replay_type
   regzex: # mysql supported regex only
     re1: '^BEACON--org.md2k.beacon--BEACON--([0-9A-F]+:){5}[0-9A-F]+$'
   txt_match:  #partial string matching, multiple are allowed
-    tm1: 'RAW--org.md2k.%'
-#    tm2: 'CU_AUDIO_FEATURE--%'
+    #tm1: 'RAW--org.md2k.%'
+    tm2: 'CU_AUDIO_FEATURE--%'
