--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pytz==2017.2
 mysql-connector-python-rf==2.2.2
 PyYAML==3.12
 minio==2.2.4
-#cassandra-driver==3.12.0
+cassandra-driver==3.12.0
 kafka
 influxdb==5.0.0
 pyarrow==0.8.0
