--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-wheel
-numpy
-scipy
+wheel==0.29.0
+numpy==1.14.2
+scipy==1.0.1
 pytz==2017.2
 mysql-connector-python-rf==2.2.2
 PyYAML==3.12
 minio==2.2.4
 cassandra-driver==3.12.0
-kafka
+kafka==1.3.5
 influxdb==5.0.0
 pyarrow==0.8.0
-pympler
-hdfs3
+pympler==0.5
+hdfs3==0.3.0
