--- a/cerebralcortex/core/test_suite/resources/cc_test_configuration.yml
+++ b/cerebralcortex/core/test_suite/resources/cc_test_configuration.yml
@@ -5,3 +5,4 @@ sample_data:
   data_folder: "resources/test_data/raw/11111111-107f-3624-aff2-dc0e0b5be53d/20171122/00000000-107f-3624-aff2-dc0e0b5be53d/"
   gz_file: "7b3538af-1299-4504-b8fd-62683c66578e.gz"
   json_file: "7b3538af-1299-4504-b8fd-62683c66578e.json"
+  corupt_data: "data.gz"
