--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ mysql-connector-python-rf==2.2.2
 PyYAML==3.12
 minio==2.2.4
 pyspark
-cassandra-driver==3.12.0
+#cassandra-driver==3.12.0
 kafka==1.3.5
 influxdb==5.0.0
 pyarrow==0.8.0
