--- a/conf/data_ingestion.yml
+++ b/conf/data_ingestion.yml
@@ -1,61 +1,37 @@
-data_ingestion:
-  influxdb_in: False
-  nosql_in: True
-  #nosql_store: "aws_s3" # acceptable parameters are: cassandra, scylladb, hdfs, filesystem, aws_s3
+#########################################################################################
+############################ Ingestion Configs ##########################################
+#########################################################################################
 
-# influxdb data ingestion pipeline will not process blacklist stream names
+data_ingestion:
+  # Data ingestion source type. Whether data information (file names) will be fetched from MySQL or kafka messaging queue. Acceptable parameters are mysql or kafka only.
+  type: "mysql"
+  # directory path where all the raw data files are stored
+  data_dir_path: ""
+  # Ingest data in influxdb for visualization?
+  influxdb_in: False
+  # ingest data in nosql storage store?
+  nosql_in: True
+
+# Set batch size if mysql INGESTION TYPE is selected
+# Number of MySQL row a batch shall process. One MySQL row contains all .gz files paths of one day worth of data of a stream.
+mysql_batch_size: "300"
+
+# Set only when kafka INGESTION TYPE is selected.
+# how often CC-kafka shall check for new messages (in seconds)
+ping_kafka: 5
+
+
+#########################################################################################
+# black listed streams' list. Black listed streams will not be ingested in NoSQL storage
+#########################################################################################
+
 influxdb_blacklist:
   ibl1: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
   ibl2: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl3: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl4: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl5: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl6: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl7: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl8: "ACCELEROMETER--org.md2k.phonesensor--PHONE"
-  ibl9: "GYROSCOPE--org.md2k.phonesensor--PHONE"
-  ibl10: "DATA_QUALITY--ECG--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl11: "BATTERY--org.md2k.autosense"
-  ibl12: "ECG--org.md2k.autosense"
-  ibl13: "RIP--org.md2k.autosense"
-  ibl14: "ACCELEROMETER-X--org.md2k.autosense"
-  ibl15: "ACCELEROMETER-Y--org.md2k.autosense"
-  ibl16: "ACCELEROMETER-Z--org.md2k.autosense"
-  ibl17: "GYRO--org.md2k.autosense"
-  ibl18: "AMBIENT_TEMPERATURE--org.md2k.phonesensor--PHONE"
-  ibl19: "BATTERY--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl20: "ACCELEROMETER--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl21: "RESPIRATION_BASELINE--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl22: "ECG--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl23: "RAW--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl24: "RESPIRATION--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl25: "SEQUENCE_NUMBER--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl26: "DATA_QUALITY--ACCELEROMETER--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl27: "DATA_QUALITY--RESPIRATION--org.md2k.autosenseble--AUTOSENSE_BLE--CHEST"
-  ibl28: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl29: "DATA_QUALITY--LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl30: "CU_AUDIO_INFERENCE--edu.dartmouth.eureka"
-  ibl31: "CU_AUDIO_FEATURE--edu.dartmouth.eureka"
-  ibl32: "CU_AUDIO_ENERGY--edu.dartmouth.eureka"
-  ibl33: "LOCATION--org.md2k.phonesensor--PHONE"
-  ibl34: "PROXIMITY--org.md2k.phonesensor--PHONE"
-  ibl35: "DATA_QUALITY--ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl36: "BATTERY--org.md2k.phonesensor--PHONE"
-  ibl37: "DATA_QUALITY--ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl38: "BATTERY--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl39: "BATTERY--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl40: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl41: "SEQUENCE_NUMBER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl42: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl43: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl44: "RAW--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl45: "PRESSURE--org.md2k.phonesensor--PHONE"
-  ibl46: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl47: "AMBIENT_LIGHT--org.md2k.phonesensor--PHONE"
-  ibl48: "GYROSCOPE--org.md2k.motionsense--MOTION_SENSE_HRV--LEFT_WRIST"
-  ibl49: "RAW--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl50: "GYROSCOPE--org.md2k.phonesensor--PHONE"
-  ibl51: "SEQUENCE_NUMBER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl52: "ACCELEROMETER--org.md2k.phonesensor--PHONE"
-  ibl53: "LED--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
-  ibl54: "ACCELEROMETER--org.md2k.motionsense--MOTION_SENSE_HRV--RIGHT_WRIST"
+
+# This will work only when data_ingestion type=mysql
+nosql_blacklist:
+  regzex:
+    re1: '^xxxBEACON--org.md2k.beacon--BEACON--([0-9A-F]+:){5}[0-9A-F]+$' # mysql supported regex only
+  txt_match:
+    tm1: 'xxxRAW--org.md2k.%' #partial string matching, multiple are allowed
