--- a/conf/api_server.yml
+++ b/conf/api_server.yml
@@ -2,6 +2,9 @@
 ################ CerebralCortex API SERVER Config #######################
 #########################################################################
 
+# Path of a directory where all the mCerebrum uploaded files will be stored before processing
+data_dir: "/home/ali/IdeaProjects/MD2K_DATA/CC_APISERVER_DATA/"
+
 apiserver:
   host: 0.0.0.0
   port: 8088
