fixed object/inheritance bugs

--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -63,11 +63,11 @@ visualization_storage: none
 #########################################################################
 ########################### Messaging Service ###########################
 #########################################################################
-messaging_service: none
+messaging_service: kafka
 
-#kafka:
-#  host: 127.0.0.1
-#  port: 9092
+kafka:
+  host: 127.0.0.1
+  port: 9092
 
 #########################################################################
 ###################### Data Provenance Storage###########################
