--- a/conf/data_ingestion.yml
+++ b/conf/data_ingestion.yml
@@ -4,9 +4,9 @@
 
 data_ingestion:
   # Data ingestion source type. Whether data information (file names) will be fetched from MySQL or kafka messaging queue. Acceptable parameters are mysql or kafka only.
-  type: "mysql"
+  type: "kafka"
   # directory path where all the raw data files are stored
-  data_dir_path: ""
+  data_dir_path: "/home/ali/IdeaProjects/MD2K_DATA/CC_APISERVER_DATA/"
   # Ingest data in influxdb for visualization?
   influxdb_in: False
   # ingest data in nosql storage store?
