--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -8,16 +8,16 @@ cc:
 #########################################################################
 ###################### NoSQL Storage ####################################
 #########################################################################
-nosql_storage: filesystem
+nosql_storage: hdfs
 
 filesystem:
-  filesystem_path: "/home/ali/cc_data/" # in case of nosql_store=filesystem, provide directory path where data shall be stored
+  filesystem_path: "/home/ali/IdeaProjects/CerebralCortex-Platform/mount_points/cc_data/" # in case of nosql_store=filesystem, provide directory path where all processed-data shall be stored
 
-#hdfs:
-#  host: 127.0.0.1
-#  port: 9001
-#  raw_files_dir: "/cerebralcortex/data/"
-#
+hdfs:
+  host: 127.0.0.1
+  port: 9001
+  raw_files_dir: ""
+
 #minio: # AWS-S3 UPDATE
 #  host: s3.amazonaws.com # for amazon pass s3.amazonaws.com and for minio simpley pass url of minio server
 #  port: 9000
@@ -51,14 +51,14 @@ mysql:
 #########################################################################
 ###################### Visualization Data Storage #######################
 #########################################################################
-visualization_storage: none
+visualization_storage: influxdb
 
-#influxdb:
-#  host: influxdb
-#  port: 8086
-#  database: cerebralcortex_raw
-#  db_user: ""
-#  db_pass: ""
+influxdb:
+  host: 127.0.0.1
+  port: 8086
+  database: cerebralcortex_raw
+  db_user: ""
+  db_pass: ""
 
 #########################################################################
 ########################### Messaging Service ###########################
