--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -8,10 +8,10 @@ cc:
 #########################################################################
 ###################### NoSQL Storage ####################################
 #########################################################################
-nosql_storage: hdfs
+nosql_storage: filesystem
 
 filesystem:
-  filesystem_path: "/home/ali/IdeaProjects/CerebralCortex-Platform/mount_points/cc_data/" # in case of nosql_store=filesystem, provide directory path where all processed-data shall be stored
+  filesystem_path: "/home/ali/IdeaProjects/MD2K_DATA/hdfs/cerebralcortex/cerebralcortex/" # in case of nosql_store=filesystem, provide directory path where all processed-data shall be stored
 
 hdfs:
   host: localhost
