--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ wheel==0.29.0
 pytz==2017.2
 boto3==1.7.76
 mysql-connector-python-rf==2.2.2
-PyYAML==3.12
+PyYAML==4.2b1
 minio==2.2.4
 kafka==1.3.5
 influxdb==5.0.0
