--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 wheel==0.29.0
 pytz==2017.2
-boto3==1.7.76
 mysql-connector-python-rf==2.2.2
 PyYAML==4.2b1
 minio==2.2.4
 kafka==1.3.5
-influxdb==5.0.0
-pyarrow==0.8.0
+influxdb==5.2.1
+pyarrow==0.11.1
 pympler==0.5
 hdfs3==0.3.0
+numpy==1.14.5
