--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -24,7 +24,7 @@ filesystem:
 #########################################################################
 
 object_storage:
-  object_storage_path: "/home/ali/IdeaProjects/MD2K_DATA/hdfs/cerebralcortex/objects/"
+  object_storage_path: "./sample_data/"
 
 #minio: # AWS-S3 UPDATE
 #  host: s3.amazonaws.com # for amazon pass s3.amazonaws.com and for minio simpley pass url of minio server
