changed the way a user should login and auth token shall be updated

--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -4,6 +4,8 @@
 cc:
   debug: True # Setting this to True will log and print errors on console as well
   throw_exception: False #if this is set to True then application will get exceptions
+  auth_token_expire_time: 40000 #seconds
+  auth_encryption_key: "md@k&#8"
 
 #########################################################################
 #                        NoSQL Storage                                  #
