--- a/conf/api_server.yml
+++ b/conf/api_server.yml
@@ -7,12 +7,12 @@ data_dir: "/home/ali/IdeaProjects/CerebralCortex-Platform/mount_points/apiserver
 
 apiserver:
   host: 0.0.0.0
-  port: 8088
+  port: 8089
   secret_key: 'super-secret'
   token_expire_time: 40000 #seconds
   debug: True
 
 routes: # Don't change if you don't know what you are doing
-  auth: "auth"
+  user: "user"
   stream: "stream"
   object: "object"
