--- a/conf/api_server.yml
+++ b/conf/api_server.yml
@@ -3,7 +3,7 @@
 #########################################################################
 
 # Path of a directory where all the mCerebrum uploaded files will be stored before processing
-data_dir: "/home/ali/IdeaProjects/CerebralCortex-Platform/mount_points/apiserver/"
+#data_dir: "/home/ali/IdeaProjects/MD2K_DATA/msgpack/"
 
 apiserver:
   host: 0.0.0.0
