--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pyarrow==0.11.1
 pympler==0.5
 hdfs3==0.3.0
 pyspark==2.4.0
-#pennprov==2.2.0.dev3
+pennprov==2.2.0.dev3
 PyJWT==1.7.1
 pandas==0.24.1
 texttable
