--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -10,16 +10,16 @@ cc:
 #########################################################################
 #                        NoSQL Storage                                  #
 #########################################################################
-nosql_storage: filesystem
+nosql_storage: hdfs
 
 filesystem:
   # in case of nosql_store=filesystem, provide directory path where all processed-data shall be stored
-  filesystem_path: "/home/ali/IdeaProjects/MD2K_DATA/rice_data/processed/"
+  filesystem_path: "/home/ali/IdeaProjects/MD2K_DATA/tmp/"
 
-#hdfs:
-#  host: localhost
-#  port: 9001
-#  raw_files_dir: "cerebralcortex/cerebralcortex/"
+hdfs:
+  host: localhost
+  port: 9001
+  raw_files_dir: "cerebralcortex/"
 
 #########################################################################
 #                        OBJECT Storage                                 #
@@ -28,15 +28,6 @@ filesystem:
 object_storage:
   object_storage_path: "/home/ali/IdeaProjects/MD2K_DATA/tmp/"
 
-#minio: # AWS-S3 UPDATE
-#  host: s3.amazonaws.com # for amazon pass s3.amazonaws.com and for minio simpley pass url of minio server
-#  port: 9000
-#  access_key: ''
-#  secret_key: ''
-#  input_bucket_name: 'cerebralcortex-mperf' # required for aws-s3
-#  output_bucket_name: 'cerebralcortex-mperf-output' # required for aws-s3
-#  dir_prefix: 'cerebralcortex/data/'
-#  secure: False #ssl
 
 #########################################################################
 #                          Relational Storage                           #
@@ -56,25 +47,36 @@ mysql:
 #########################################################################
 ###################### Visualization Data Storage #######################
 #########################################################################
-visualization_storage: none
+visualization_storage: influxdb
 
-#influxdb:
-#  host: 127.0.0.1
-#  port: 8086
-#  database: cerebralcortex_raw
-#  db_user: ""
-#  db_pass: ""
+influxdb:
+  host: 127.0.0.1
+  port: 8086
+  database: cerebralcortex_raw
+  db_user: ""
+  db_pass: ""
 
 #########################################################################
 ########################### Messaging Service ###########################
 #########################################################################
-messaging_service: none
+messaging_service: kafka
 
-#kafka:
-#  host: 127.0.0.1
-#  port: 9092
-#  ping_kafka: 5
-#  consumer_group_id: "md2k-data-ingestion"
+kafka:
+  host: 127.0.0.1
+  port: 9092
+  # ping__kafka: how often CC-kafka shall check for new messages (in seconds)
+  ping_kafka: 5
+  consumer_group_id: "md2k-data-ingestion"
+
+#########################################################################
+#                          SPARK CONFIGS                                #
+#########################################################################
+# Do not change if you do not know what you are doing
+# TODO
+#spark:
+#  host:
+#  enable_gui: True
+#  master:
 
 #########################################################################
 #                          Data Provenance Storage                      #
