fixed bugs and updated code

--- a/conf/api_server.yml
+++ b/conf/api_server.yml
@@ -15,4 +15,4 @@ apiserver:
 routes: # Don't change if you don't know what you are doing
   user: "user"
   stream: "stream"
-  object: "object"
+  object: "bucket"
