--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -6,6 +6,7 @@ cc:
   throw_exception: False #if this is set to True then application will get exceptions
   auth_token_expire_time: 40000 #seconds
   auth_encryption_key: "md@k&#8"
+  log_files_path: ""
 
 #########################################################################
 #                        NoSQL Storage                                  #
@@ -14,12 +15,12 @@ nosql_storage: filesystem
 
 filesystem:
   # in case of nosql_store=filesystem, provide directory path where all processed-data shall be stored
-  filesystem_path: "/home/ali/IdeaProjects/MD2K_DATA/tmp/"
+  filesystem_path: "/home/ali/IdeaProjects/MD2K_DATA/rice_data/processed/"
 
 #hdfs:
 #  host: localhost
 #  port: 9001
-#  raw_files_dir: "cerebralcortex/"
+#  raw_files_dir: "cerebralcortex/cerebralcortex/"
 
 #########################################################################
 #                        OBJECT Storage                                 #
@@ -28,6 +29,15 @@ filesystem:
 object_storage:
   object_storage_path: "/home/ali/IdeaProjects/MD2K_DATA/tmp/"
 
+#minio: # AWS-S3 UPDATE
+#  host: s3.amazonaws.com # for amazon pass s3.amazonaws.com and for minio simpley pass url of minio server
+#  port: 9000
+#  access_key: ''
+#  secret_key: ''
+#  input_bucket_name: 'cerebralcortex-mperf' # required for aws-s3
+#  output_bucket_name: 'cerebralcortex-mperf-output' # required for aws-s3
+#  dir_prefix: 'cerebralcortex/data/'
+#  secure: False #ssl
 
 #########################################################################
 #                          Relational Storage                           #
@@ -47,23 +57,33 @@ mysql:
 #########################################################################
 ###################### Visualization Data Storage #######################
 #########################################################################
-visualization_storage: influxdb
+visualization_storage: none
 
-influxdb:
-  host: 127.0.0.1
-  port: 8086
-  database: cerebralcortex_raw
-  db_user: ""
-  db_pass: ""
+#influxdb:
+#  host: 127.0.0.1
+#  port: 8086
+#  database: cerebralcortex_raw
+#  db_user: ""
+#  db_pass: ""
 
 #########################################################################
 ########################### Messaging Service ###########################
 #########################################################################
-messaging_service: kafka
+messaging_service: none
 
-kafka:
-  host: 127.0.0.1
-  port: 9092
-  # ping__kafka: how often CC-kafka shall check for new messages (in seconds)
-  ping_kafka: 5
-  consumer_group_id: "md2k-data-ingestion"
+#kafka:
+#  host: 127.0.0.1
+#  port: 9092
+
+#########################################################################
+#                          Data Provenance Storage                      #
+#########################################################################
+provenance: none
+
+mprove:
+#  host: 127.0.0.1 # change if MySQL is installed remotely
+#  port: 8088 # Change if MySQL is not using default port
+#  username: 'sample' # Change
+#  pass: 'default' # Change
+#  namespace: 'http://mprov.md2k.org'
+#  graph_name: 'mProv-graph'
