--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -27,7 +27,7 @@ hdfs:
 #########################################################################
 
 object_storage:
-  object_storage_path: "/home/ali/IdeaProjects/CerebralCortex-Platform/mount_points/apiserver/data/objects/"
+  object_storage_path: "/home/ali/IdeaProjects/CerebralCortex-2.0/cerebralcortex/test_suite/sample_data/objects/"
 
 #minio: # AWS-S3 UPDATE
 #  host: s3.amazonaws.com # for amazon pass s3.amazonaws.com and for minio simpley pass url of minio server
@@ -69,13 +69,13 @@ influxdb:
 #########################################################################
 ########################### Messaging Service ###########################
 #########################################################################
-messaging_service: none
+messaging_service: kafka
 
-#kafka:
-#  host: 127.0.0.1
-#  port: 9092
-#  ping_kafka: 5
-#  consumer_group_id: "md2k"
+kafka:
+  host: 127.0.0.1
+  port: 9092
+  ping_kafka: 5
+  consumer_group_id: "md2k"
 #########################################################################
 #                          Data Provenance Storage                      #
 #########################################################################
