moved creation of kafka object in if cond

--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -69,7 +69,7 @@ influxdb:
 #########################################################################
 ########################### Messaging Service ###########################
 #########################################################################
-messaging_service: kafka
+messaging_service: none
 
 kafka:
   host: 127.0.0.1
