--- a/conf/data_ingestion.yml
+++ b/conf/data_ingestion.yml
@@ -13,7 +13,7 @@ data_ingestion:
   # if set to "online" then no data would be stored on local hard-drive. All data would be processed by API-Server
   # and stored in storage type/location defined in cerebralcortex.yml
   # acceptable parameters: offline OR online
-  ingestion_type: "offline"
+  ingestion_type: "online"
 
   # if ingestion_type is set to "offline" then please specify hard-drive path where all the raw incoming data should be stored
   raw_data_path: "/home/ali/IdeaProjects/MD2K_DATA/CC_APISERVER_DATA/raw"
