--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ influxdb==5.2.1
 pyarrow==0.15.1
 pympler==0.5
 hdfs3==0.3.0
-pyspark==2.4.4
+#pyspark==2.4.4
 msgpack==0.6.1
 PyJWT==1.7.1
 pandas==0.24.2
