updated code for orm

--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -45,6 +45,9 @@ mysql:
   database: cerebralcortex
   connection_pool_size: 1
 
+sqlite:
+  file_path: "/user/ali/cc33/"
+
 #########################################################################
 ###################### Visualization Data Storage #######################
 #########################################################################
