updated mprov metadata write and decorator

--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -63,7 +63,7 @@ influxdb:
 #########################################################################
 #                          Data Provenance Storage                      #
 #########################################################################
-mprov: none
+mprov: pennprov
 
 pennprov:
   host: http://127.0.0.1:8088
