--- a/conf/cerebralcortex.yml
+++ b/conf/cerebralcortex.yml
@@ -54,7 +54,7 @@ influxdb:
 #########################################################################
 #                          Data Provenance Storage                      #
 #########################################################################
-mprov: pennprov
+mprov: none
 
 pennprov:
   host: http://127.0.0.1:8088
